# monopoly

./: Cargo.toml
http/: Cargo.toml
http/src/: main.rs
src/: main.rs
websocket/: Cargo.toml
websocket/src/: api.rs  back_api.rs  front_api.rs  game.rs  main.rs  util.rs
websocket/src/api/: back.rs  front.rs  mod.rs
websocket/src/game/: mod.rs
