[package]
name = "monopoly"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-tungstenite = "0.13.0"
hyper = { version = "1.3.1", features = ["server", "http1"] }
hyper-util = "0.1.3"
http-body-util = "0.1.1"
tungstenite = "0.21.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
eyre = "0.6.12"