[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.12", default-features = false }
log = { version = "0.4.21", default-features = false }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }
tide = { version = "0.16.0", default-features = false, features = ["default"]}