[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", default-features = false, features = ["default"] }
eyre = "0.6.12"
log = "0.4.21"
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }
tide = "0.16.0"
rand = "0.8.5"
libc = "0.2.154"