[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", default-features = false, features = ["default"] }
soketto = { version = "0.8.0", default-features = false }
eyre = { version = "0.6.12", default-features = false }
log = { version = "0.4.21", default-features = false }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }