[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", default-features = false, features = ["default"] }
parking_lot = "0.12.3"
soketto = { version = "0.8.0", default-features = false }
eyre = "0.6.12"
log = "0.4.21"
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }